INTYG-6719: Implemented logic for Questions and Answers.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.html
@@ -6,5 +6,5 @@
     <uv-render-components config="config.components" view-data="viewData"></uv-render-components>
 
   </div>
-  <wc-inline-komplettering frage-id="config.labelKey"></wc-inline-komplettering>
+  <wc-inline-komplettering frage-id="config.labelKey" ng-if="showKompletteringar()"></wc-inline-komplettering>
 </div>
