--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -1,23 +1,26 @@
 <div id="utkast-footer" class="utkast-footer" ng-mousedown="initValidationSequence()">
-  <!-- Läkare: Signera -->
-  <wc-utkast-footer-sign
-      wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}"
-      view-state="viewState"
-      cert-form="certForm"></wc-utkast-footer-sign>
 
-  <!-- Vårdadmin -->
-  <div class="vardadmin-footer" wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
-    <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
-    <wc-utkast-footer-notify
-        wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
+  <div ng-if="editEnabled">
+    <!-- Läkare: Signera -->
+    <wc-utkast-footer-sign
+        wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}"
         view-state="viewState"
-        cert-form="certForm"></wc-utkast-footer-notify>
+        cert-form="certForm"></wc-utkast-footer-sign>
 
-    <!-- Notifiera läkare genom att vidarebefordra -->
-    <wc-utkast-footer-vidarebefordra
-        wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
-        view-state="viewState"
-        cert-form="certForm"></wc-utkast-footer-vidarebefordra>
+    <!-- Vårdadmin -->
+    <div class="vardadmin-footer" wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
+      <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
+      <wc-utkast-footer-notify
+          wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
+          view-state="viewState"
+          cert-form="certForm"></wc-utkast-footer-notify>
+
+      <!-- Notifiera läkare genom att vidarebefordra -->
+      <wc-utkast-footer-vidarebefordra
+          wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
+          view-state="viewState"
+          cert-form="certForm"></wc-utkast-footer-vidarebefordra>
+    </div>
   </div>
 
   <div class="intygs-id">
