--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -1,26 +1,25 @@
 <div id="utkast-footer" class="utkast-footer" ng-mousedown="initValidationSequence()">
 
-  <div ng-if="editEnabled">
-    <!-- Läkare: Signera -->
-    <wc-utkast-footer-sign
-        wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}"
+  <!-- Läkare: Signera -->
+  <wc-utkast-footer-sign
+      ng-if="editEnabled"
+      wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}"
+      view-state="viewState"
+      cert-form="certForm"></wc-utkast-footer-sign>
+
+  <!-- Vårdadmin -->
+  <div ng-if="editEnabled" class="vardadmin-footer" wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
+    <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
+    <wc-utkast-footer-notify
+        wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
         view-state="viewState"
-        cert-form="certForm"></wc-utkast-footer-sign>
+        cert-form="certForm"></wc-utkast-footer-notify>
 
-    <!-- Vårdadmin -->
-    <div class="vardadmin-footer" wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
-      <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
-      <wc-utkast-footer-notify
-          wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
-          view-state="viewState"
-          cert-form="certForm"></wc-utkast-footer-notify>
-
-      <!-- Notifiera läkare genom att vidarebefordra -->
-      <wc-utkast-footer-vidarebefordra
-          wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
-          view-state="viewState"
-          cert-form="certForm"></wc-utkast-footer-vidarebefordra>
-    </div>
+    <!-- Notifiera läkare genom att vidarebefordra -->
+    <wc-utkast-footer-vidarebefordra
+        wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
+        view-state="viewState"
+        cert-form="certForm"></wc-utkast-footer-vidarebefordra>
   </div>
 
   <div class="intygs-id">
