NEW-SRS: Tydliggjort i koden att samtycke avser vårdenhet. Lagt till diagnos som nyckel för läkares egen bedömning. Fix för att rensa SRS när diagnos rensas. Anpassat diagram efter designspec.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
@@ -15,10 +15,10 @@
         </div>
     
         <div class="srs-questions-submit">
-            <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatRight btn btn-secondary ng-binding"
+            <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatLeft btn btn-secondary ng-binding"
                 ng-click="visaClicked()" ng-disabled="!srs.showVisaKnapp || srs.consent !== 'JA'"  popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="auto top">
-                    Beräkna patientens risk
+                    Beräkna
             </button>
         </div>
     </section>
