INTYGFV-11107: Lagat tooltip på kopiera låst utkast-knapp i utkastheadern

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
@@ -2,11 +2,11 @@
 
   <button
       data-ng-if="showCopyBtn()"
-      data-ng-disabled="copyUtkastPopOverOpen=false;disabledCopyBtn()"
+      data-ng-disabled="disabledCopyBtn()"
       type="button"
       id="copy-utkast"
       class="btn btn-primary"
-      ng-click="copy()"
+      ng-click="copyUtkastPopOverOpen=false;copy()"
       uib-popover="{{copyBtnTooltipText}}"
       popover-is-open="copyUtkastPopOverOpen"
       popover-popup-delay="300"
