INTYGFV-11078: Döljt välj intygsmottagare för andra enheter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -1,7 +1,8 @@
 <div class="white-space-no-wrap" ng-cloak>
 
   <wc-approve-receivers-button
-      ng-if="!CommonIntygViewState.isRevoked()"
+      ng-if="showValjMottagareButton()"
+      vardenhet="{{viewState.enhetsId}}"
       intygtyp="intygType"
       intygid="viewState.intygModel.id">
   </wc-approve-receivers-button>
