--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
@@ -31,61 +31,54 @@
             </div>
 
 <!-- ÅTGÄRDER - OBS -->
+            <div id="atgarderObs">
             <h3>Tänk på att</h3>
             <b>{{srs.atgarder.atgarderDiagnosisCode}} - {{srs.atgarder.atgarderDiagnosisDescription}}</b>
-            <div id="atgarderObs">
                 <div ng-repeat="(key,atgard) in srs.atgarder.firstAtgarderObs">
-                    <section class="srs-section" ng-attr-id="srs-text-{{::key}}" ng-if="atgard.recommendationText">
-                        <wc-expandable-content content="atgard.recommendationText" threshold-pixel-height="80px" link-dom-id="srs-text-expandable-content-link-{{::key}}">
-
-                        </wc-expandable-content>
-                    </section>
+                        <wc-srs-recommendation atgard="{{atgard}}" />
                 </div>
-                <div ng-repeat="(key,atgard) in srs.atgarder.moreAtgarderObs">
-                    <section class="srs-section" ng-attr-id="srs-text-{{::key}}" ng-if="atgard.recommendationText">
-                        <wc-expandable-content content="atgard.recommendationText" threshold-pixel-height="80px" link-dom-id="srs-text-expandable-content-link-{{::key}}">
-
-                        </wc-expandable-content>
-                    </section>
-                </div>
-            </div>
-
-<!-- ÅTGÄRDER - REK -->
-            <h3>Rekommenderade åtgärder</h3>
-            <b>{{srs.atgarder.atgarderDiagnosisCode}} - {{srs.atgarder.atgarderDiagnosisDescription}}</b>
-            <div id="atgarderRek">
-                <div ng-repeat="(key,atgard) in srs.atgarder.firstAtgarderRek">
-                    <section class="srs-section" ng-attr-id="srs-text-{{::key}}" ng-if="atgard.recommendationText">
-                        <wc-expandable-content content="atgard.recommendationText" threshold-pixel-height="80px" link-dom-id="srs-text-expandable-content-link-{{::key}}">
-
-                        </wc-expandable-content>
-                    </section>
-                </div>
-                <b class="floatLeft" data-ng-if="isRecommendationsCollapsed">Visa fler...</b>
-                <b class="floatLeft" data-ng-if="!isRecommendationsCollapsed">Visa färre...</b>
-                <div class="line">
-                    <a id="recommendationsCollapser" data-toggle="collapse" ng-click="isRecommendationsCollapsed=!isRecommendationsCollapsed"
-                       href="#collapseRecommendations" aria-expanded="false" aria-controls="collapseRecommendations">
-                        <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isRecommendationsCollapsed, 'glyphicon-menu-up': !isRecommendationsCollapsed}"></i>
-                    </a>
-                </div>
-                <br/>
-                <br/>
-                <div id="collapseRecommendations" class="panel-collapse collapse">
-                    <div ng-repeat="(key,atgard) in srs.atgarder.moreAtgarderRek">
-                        <section class="srs-section" ng-attr-id="srs-text-{{::key}}" ng-if="atgard.recommendationText">
-                            <wc-expandable-content content="atgard.recommendationText" threshold-pixel-height="80px" link-dom-id="srs-text-expandable-content-link-{{::key}}">
-
-                            </wc-expandable-content>
-                        </section>
+                <div ng-if="srs.atgarder.moreAtgarderObs">
+                    <div class="line fullWidth">
+                        <div class="srs-observe-list-collapser" ng-click="isObserveCollapsed = !isObserveCollapsed">
+                            {{isObserveCollapsed ? 'Se fler...':'Se färre...'}}
+                            <i class="glyphicon"
+                               ng-class="{'glyphicon-menu-down': isObserveCollapsed, 'glyphicon-menu-up': !isObserveCollapsed}"></i></div>
+                    </div>
+                    <div class="line fullWidth" id="collapseObserves" ng-if="!isObserveCollapsed">
+                        <div ng-repeat="(key,atgard) in srs.atgarder.moreAtgarderObs">
+                            <wc-srs-recommendation atgard="{{atgard}}" />
+                        </div>
                     </div>
                 </div>
-<!--                <div class="floatRight">-->
-<!--                    <button type="button" class="btn btn-secondary ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>-->
-<!--                </div>-->
+            </div>
+<!-- ÅTGÄRDER - REK -->
+            <div id="atgarderRek">
+            <h3>Åtgärdsrekommendationer</h3>
+            <b>{{srs.atgarder.atgarderDiagnosisCode}} - {{srs.atgarder.atgarderDiagnosisDescription}}</b>
+
+                <div ng-repeat="(key,atgard) in srs.atgarder.firstAtgarderRek">
+                        <wc-srs-recommendation atgard="{{atgard}}" />
+                </div>
+                <div ng-if="srs.atgarder.moreAtgarderRek">
+                    <div class="line fullWidth">
+                        <div class="srs-recommendation-list-collapser" ng-click="isRecommendationsCollapsed = !isRecommendationsCollapsed">
+                            {{isRecommendationsCollapsed ? 'Se fler åtgärder...':'Se färre åtgärder...'}}
+                            <i class="glyphicon"
+                               ng-class="{'glyphicon-menu-down': isRecommendationsCollapsed, 'glyphicon-menu-up': !isRecommendationsCollapsed}"></i></div>
+                    </div>
+                    <div class="line fullWidth" id="collapseRecommendations" ng-if="!isRecommendationsCollapsed">
+                        <div ng-repeat="(key,atgard) in srs.atgarder.moreAtgarderRek">
+                            <wc-srs-recommendation atgard="{{atgard}}" />
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
+
+<!-- STATISTIK -->
+
+
         <div id="statstics{{id}}" class="tab-pane fade">
             <br>
             <div ng-if="srs.statistikInfo">
