--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatus.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatus.directive.html
@@ -2,12 +2,12 @@
 
   <!-- error from button interaction -->
   <wc-alert-message id="intyg-inline-error"
-                    ng-show="intygViewState.common.inlineErrorMessageKey"
+                    ng-if="intygViewState.common.inlineErrorMessageKey"
                     alert-severity="danger"
                     alert-message-id="{{intygViewState.common.inlineErrorMessageKey}}">
   </wc-alert-message>
 
-  <span ng-show="!intygViewState.common.inlineErrorMessageKey">
+  <span ng-if="!intygViewState.common.inlineErrorMessageKey">
     <wc-intyg-status-slot id="intygstatus1" intygstatus="intygstatus1[0]"></wc-intyg-status-slot>
     <wc-intyg-status-slot id="intygstatus2" intygstatus="intygstatus2[0]"></wc-intyg-status-slot>
   </span>
