--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastStatus/wcUtkastStatus.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastStatus/wcUtkastStatus.directive.html
@@ -2,12 +2,12 @@
 
   <!-- error from button interaction -->
   <wc-alert-message id="utkast-inline-error"
-                    ng-show="utkastViewState.common.error.saveErrorCode"
+                    ng-if="utkastViewState.common.error.saveErrorCode"
                     alert-severity="danger">
     <span ng-bind-html="utkastViewState.common.error.saveErrorMessage"></span>
   </wc-alert-message>
 
-  <span ng-show="!utkastViewState.common.error.saveErrorCode">
+  <span ng-if="!utkastViewState.common.error.saveErrorCode">
     <wc-intyg-status-slot id="intygstatus1" intygstatus="getIntygStatus1()"></wc-intyg-status-slot>
     <wc-intyg-status-slot id="intygstatus2" intygstatus="getIntygStatus2()"></wc-intyg-status-slot>
   </span>
